# kinect-rtsp

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INFRARED_CONFIG.md  README.md  build.rs  infrared_config.json  run.ps1  set_config.ps1  test_config.ps1
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
src/: audio.rs  audio_frame_buffer.rs  color.rs  infrared.rs  infrared_config.rs  main.rs  rtsp_publisher.rs
