[package]
name = "kinect-rtsp"
version = "0.1.1"
edition = "2024"

[dependencies]
kinect-v2 = "0.1.3"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
ringbuf = "0.4.8"
log = "0.4.28"
env_logger = "0.11.8"
once_cell = "1.21.3"
bytemuck = "1.24.0"
gstreamer = { version = "0.24.3", features = ["v1_26"] }
gstreamer-app = { version = "0.24.2", features = ["v1_26"] }
gstreamer-rtsp-server = { version = "0.24.2", features = ["v1_26"] }
gstreamer-rtsp = { version = "0.24.2", features = ["v1_26"] }
glib = "0.21.4"
clap = { version = "4.5.51", features = ["derive"] }
base64 = "0.22.1"
parking_lot = "0.12.5"

[patch.crates-io]
kinect-v2 = { git = "https://github.com/wangfu91/kinect-v2-rs.git" }
